<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.konstantin.gitcommit.CommitsListActivity">
    <item android:id="@+id/action_sort" android:title="@string/action_sort"
        android:orderInCategory="100" app:showAsAction="never">

        <menu>
            <group android:checkableBehavior="single">

                <item android:id="@+id/sort_asc" android:title="@string/sort_asc"
                    android:orderInCategory="100" app:showAsAction="never"/>

                <item android:id="@+id/sort_desc" android:title="@string/sort_desc"
                    android:orderInCategory="200" app:showAsAction="never"/>

            </group>
        </menu>

    </item>
</menu>
