<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:onClick="onClick"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/owner_edit_text"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/owner" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/repo_edit_text"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/repo" />

</RelativeLayout>
